# yolo_ros

./: .gitignore  CMakeLists.txt  README.md  environment_with_ros.yaml  package.xml  setup.py
cfg/: obj.names
src/: image_pub_test.py  test_detection_sub_node.py  yolo_ros_node.py  yolo_trt.py
utils/: helpers.py  yolo_classes.py
